--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Marco Persico</title>
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Marco Persico's professional resume showcasing skills, experience, and projects."
+    />
+    <meta
+      name="keywords"
+      content="Marco Persico, Resume, Software Developer, Portfolio"
+    />
+    <meta name="author" content="Marco Persico" />
+    <!-- Social Media Meta Tags -->
+    <meta property="og:title" content="Marco Persico Resume" />
+    <meta
+      property="og:description"
+      content="Explore Marco Persico's professional journey and projects."
+    />
+    <meta property="og:image" content="/path/to/image.jpg" />
+    <meta property="og:url" content="https://www.marco.persico.com" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/logo.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/logo.svg" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/logo.svg" />
+    <link rel="manifest" href="/site.webmanifest" />
   </head>
   <body>
     <div id="root"></div>
