General improvements to seo and performance

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       property="og:description"
       content="Explore Marco Persico's professional journey and projects."
     />
-    <meta property="og:image" content="/path/to/image.jpg" />
     <meta property="og:url" content="https://www.marco.persico.com" />
     <meta name="twitter:card" content="summary_large_image" />
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="/logo.svg" />
     <link rel="icon" type="image/png" sizes="32x32" href="/logo.svg" />
     <link rel="icon" type="image/png" sizes="16x16" href="/logo.svg" />
-    <link rel="manifest" href="/site.webmanifest" />
+
+    <link rel="preload" as="image" href="/src/assets/resume-profile.webp" />
   </head>
   <body>
     <div id="root"></div>
